fix: z-index of on demand menu

--- a/store/src/styles/components/on_demand_menu.scss
+++ b/store/src/styles/components/on_demand_menu.scss
@@ -79,7 +79,7 @@
    justify-content: center;
    /*Stick to the top  with the equal height of navigatin menu*/
    top: var(--hern-navigation-menu-height);
-   z-index: 10;
+   z-index: 99;
    width: inherit;
    background-color: #fff;
    > ul {
